inclusão da imagem

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
         <h1>Conheça Busan</h1>
       </header>
       <div>
-        <img src="" alt="Foto da cidade de Busan na Coréia do Sul" />
+        <img
+          src="./assets/busan.png"
+          alt="Foto da cidade de Busan na Coréia do Sul"
+        />
         <p>
           Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde
           churrascarias de primeira linha até tradicionais barracas de comida de
           rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos
           as suas ofertas culinárias.
         </p>
+        <span id="divider"></span>
       </div>
     </div>
   </body>
