adicionando imagens e continuando a estruturação do html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <div id="container">
       <header>
-        <p>Sua próxima viagem:</p>
+        <span>Sua próxima viagem:</span>
         <h1>Conheça Busan</h1>
       </header>
-      <div>
+      <div id="page-head">
         <img
           src="./assets/busan.png"
           alt="Foto da cidade de Busan na Coréia do Sul"
@@ -22,8 +22,65 @@
           rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos
           as suas ofertas culinárias.
         </p>
-        <span id="divider"></span>
       </div>
+      <main id="content-list">
+        <div id="divider">_</div>
+        <section id="title">
+          <span>Para os amantes de história</span>
+          <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+          <p>
+            As atrações de Busan vão desde templos budistas centenários que
+            pontilham as montanhas e o litoral da cidade até praias imaculadas
+            com águas cristalinas. Esta cidade litorânea tem muitas coisas para
+            fazer o ano todo - as famílias podem passar o tempo em um aquário à
+            beira-mar, os compradores podem explorar bairros vibrantes e os
+            amantes da natureza podem desfrutar de longas caminhadas até
+            mirantes panorâmicos. Os santuários budistas que pontilham a costa e
+            as montanhas de Busan têm uma arquitetura impressionante que irá
+            encantar os fotógrafos.
+          </p>
+        </section>
+        <section id="card-travel-one"></section>
+        <img src="./assets/templo-haedong.png" alt="" />
+        <ol>
+          <li><h3>Templo Haedong Yongussa</h3></li>
+          <p>
+            O Templo Haedong Yonggungsa é um templo budista localizado no
+            extremo nordeste de Busan. Construído em 1376, é um dos poucos
+            templos na Coreia construídos à beira-mar – você pode desfrutar de
+            vistas do Mar do Leste de um lado e de belas montanhas do outro.
+            <br />
+            Bom para: <br />
+            <span class="content-info">・História</span>
+          </p>
+
+          <section id="card-travel-two"></section>
+          <img src="" alt="" />
+          <li><h3>Templo Beomeo-sa</h3></li>
+          <p>
+            O Templo Haedong Yonggungsa é um templo budista localizado no
+            extremo nordeste de Busan. Construído em 1376, é um dos poucos
+            templos na Coreia construídos à beira-mar – você pode desfrutar de
+            vistas do Mar do Leste de um lado e de belas montanhas do outro.
+            <br />
+            Bom para: <br />
+            <span class="content-info">・História</span>
+          </p>
+
+          <section id="card-travel-two"></section>
+          <img src="" alt="" />
+          <li><h3>Templo Beomeo-sa</h3></li>
+          <p>
+            O Templo Haedong Yonggungsa é um templo budista localizado no
+            extremo nordeste de Busan. Construído em 1376, é um dos poucos
+            templos na Coreia construídos à beira-mar – você pode desfrutar de
+            vistas do Mar do Leste de um lado e de belas montanhas do outro.
+            <br />
+            Bom para: <br />
+            <span class="content-info">・História</span>
+          </p>
+        </ol>
+      </main>
     </div>
   </body>
 </html>
