--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             encantar os fotógrafos.
           </p>
         </section>
-        <section id="card-travel-one"></section>
-        <img src="./assets/templo-haedong.png" alt="" />
         <ol>
+          <section id="card-travel-one"></section>
+          <img src="./assets/templo-haedong.png" alt="" />
           <li><h3>Templo Haedong Yongussa</h3></li>
           <p>
             O Templo Haedong Yonggungsa é um templo budista localizado no
@@ -55,26 +55,28 @@
           </p>
 
           <section id="card-travel-two"></section>
-          <img src="" alt="" />
+          <img src="./assets/templo-beomeo-sa.png" alt="" />
           <li><h3>Templo Beomeo-sa</h3></li>
           <p>
-            O Templo Haedong Yonggungsa é um templo budista localizado no
-            extremo nordeste de Busan. Construído em 1376, é um dos poucos
-            templos na Coreia construídos à beira-mar – você pode desfrutar de
-            vistas do Mar do Leste de um lado e de belas montanhas do outro.
+            O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele
+            está localizado no alto da borda leste da montanha Geumjeongsa e
+            fica distante da agitação da cidade. O Daeungjeon Hall do templo é
+            um exemplo bem preservado da arquitetura da Dinastia Joseon.
             <br />
             Bom para: <br />
             <span class="content-info">・História</span>
           </p>
 
-          <section id="card-travel-two"></section>
-          <img src="" alt="" />
-          <li><h3>Templo Beomeo-sa</h3></li>
+          <section id="card-travel-three"></section>
+          <img src="./assets/parque-yongdusan.png" alt="" />
+          <li><h3>Parque Yongdusan</h3></li>
           <p>
-            O Templo Haedong Yonggungsa é um templo budista localizado no
-            extremo nordeste de Busan. Construído em 1376, é um dos poucos
-            templos na Coreia construídos à beira-mar – você pode desfrutar de
-            vistas do Mar do Leste de um lado e de belas montanhas do outro.
+            O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos
+            monumentos mais importantes da cidade. Você pode ver vistas
+            espetaculares do topo da Torre Busan, de 120 metros de altura. O
+            parque tem 2 museus – confira os instrumentos musicais tradicionais
+            no Museum of World Folk Instruments e mais de 80 veleiros coreanos
+            no Exhibition Hall of World Model Boats.
             <br />
             Bom para: <br />
             <span class="content-info">・História</span>
@@ -82,5 +84,8 @@
         </ol>
       </main>
     </div>
+    <footer>
+      <span>Feito com <span id="heart"></span> pela Rocketseat</span>
+    </footer>
   </body>
 </html>
