--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Turístico</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="container">
@@ -79,13 +80,15 @@
             no Exhibition Hall of World Model Boats.
             <br />
             Bom para: <br />
-            <span class="content-info">・História</span>
+            <p id="content-info-one">・Casais</p>
+            <p id="content-info-two">・Casais</p>
+            <p id="content-info-three">・Casais</p>
           </p>
         </ol>
       </main>
     </div>
     <footer>
-      <span>Feito com <span id="heart"></span> pela Rocketseat</span>
+      Feito com <img src="./assets/ph_heart-fill.svg" alt="" />pela Rocketseat
     </footer>
   </body>
 </html>
