--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Local Turístico</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
@@ -80,10 +86,10 @@
             no Exhibition Hall of World Model Boats.
             <br />
             Bom para: <br />
-            <p id="content-info-one">・Casais</p>
-            <p id="content-info-two">・Casais</p>
-            <p id="content-info-three">・Casais</p>
           </p>
+          <p id="content-info-one">・Casais</p>
+          <p id="content-info-two">・Casais</p>
+          <p id="content-info-three">・Casais</p>
         </ol>
       </main>
     </div>
