estilizando a landing-page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="container">
       <header>
-        <span>Sua próxima viagem:</span>
+        <span class="text-headline">Sua próxima viagem:</span>
         <h1>Conheça Busan</h1>
       </header>
       <div id="page-head">
@@ -23,17 +23,17 @@
           src="./assets/busan.png"
           alt="Foto da cidade de Busan na Coréia do Sul"
         />
-        <p>
+        <h3>
           Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde
           churrascarias de primeira linha até tradicionais barracas de comida de
           rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos
           as suas ofertas culinárias.
-        </p>
+        </h3>
       </div>
       <main id="content-list">
-        <div id="divider">_</div>
+        <div id="divider"></div>
         <section id="title">
-          <span>Para os amantes de história</span>
+          <span class="text-headline">Para os amantes de história</span>
           <h2>Descubra 3 destinos imperdíveis em Busan</h2>
           <p>
             As atrações de Busan vão desde templos budistas centenários que
