--- a/index.html
+++ b/index.html
@@ -47,36 +47,38 @@
             encantar os fotógrafos.
           </p>
         </section>
-        <ol>
+        <ol id="card-travel">
           <section id="card-travel-one"></section>
           <img src="./assets/templo-haedong.png" alt="" />
-          <li><h3>Templo Haedong Yongussa</h3></li>
-          <p>
+          <h3><li>Templo Haedong Yongussa</li></h3>
+          <p id="content-card">
             O Templo Haedong Yonggungsa é um templo budista localizado no
             extremo nordeste de Busan. Construído em 1376, é um dos poucos
             templos na Coreia construídos à beira-mar – você pode desfrutar de
             vistas do Mar do Leste de um lado e de belas montanhas do outro.
             <br />
-            Bom para: <br />
+            <br />
+            <strong>Bom para:</strong><br />
             <span class="content-info">・História</span>
           </p>
 
           <section id="card-travel-two"></section>
           <img src="./assets/templo-beomeo-sa.png" alt="" />
-          <li><h3>Templo Beomeo-sa</h3></li>
+          <h3><li>Templo Beomeo-sa</li></h3>
           <p>
             O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele
             está localizado no alto da borda leste da montanha Geumjeongsa e
             fica distante da agitação da cidade. O Daeungjeon Hall do templo é
             um exemplo bem preservado da arquitetura da Dinastia Joseon.
             <br />
-            Bom para: <br />
+            <br />
+            <strong>Bom para:</strong> <br />
             <span class="content-info">・História</span>
           </p>
 
           <section id="card-travel-three"></section>
           <img src="./assets/parque-yongdusan.png" alt="" />
-          <li><h3>Parque Yongdusan</h3></li>
+          <h3><li>Parque Yongdusan</li></h3>
           <p>
             O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos
             monumentos mais importantes da cidade. Você pode ver vistas
@@ -85,11 +87,15 @@
             no Museum of World Folk Instruments e mais de 80 veleiros coreanos
             no Exhibition Hall of World Model Boats.
             <br />
-            Bom para: <br />
+            <br />
+            <strong>Bom para:</strong> <br />
           </p>
-          <p id="content-info-one">・Casais</p>
-          <p id="content-info-two">・Casais</p>
-          <p id="content-info-three">・Casais</p>
+
+          <ul class="list">
+            <li>Casais</li>
+            <li>Famílias</li>
+            <li>Orçamento</li>
+          </ul>
         </ol>
       </main>
     </div>
