--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
         </section>
         <ol id="card-travel">
-          <section id="card-travel-one"></section>
+          <section id="card-travel-one">
           <img src="./assets/templo-haedong.png" alt="" />
           <h3><li>Templo Haedong Yongussa</li></h3>
           <p id="content-card">
@@ -59,10 +59,12 @@
             <br />
             <br />
             <strong>Bom para:</strong><br />
-            <span class="content-info">・História</span>
+            <ul>
+              <li class="one-item">História</li>
+            </ul>
           </p>
-
-          <section id="card-travel-two"></section>
+        </section>
+          <section id="card-travel-two">
           <img src="./assets/templo-beomeo-sa.png" alt="" />
           <h3><li>Templo Beomeo-sa</li></h3>
           <p>
@@ -73,10 +75,12 @@
             <br />
             <br />
             <strong>Bom para:</strong> <br />
-            <span class="content-info">・História</span>
+            <ul>
+              <li class="one-item">História</li>
+            </ul>
           </p>
-
-          <section id="card-travel-three"></section>
+        </section>
+          <section id="card-travel-three">
           <img src="./assets/parque-yongdusan.png" alt="" />
           <h3><li>Parque Yongdusan</li></h3>
           <p>
@@ -91,11 +95,12 @@
             <strong>Bom para:</strong> <br />
           </p>
 
-          <ul class="list">
+          <ul>
             <li>Casais</li>
             <li>Famílias</li>
             <li>Orçamento</li>
           </ul>
+        </section>
         </ol>
       </main>
     </div>
