--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </h3>
       </div>
       <main id="content-list">
-        <div id="divider"></div>
+        <div class="divider"></div>
         <section id="title">
           <span class="text-headline">Para os amantes de história</span>
           <h2>Descubra 3 destinos imperdíveis em Busan</h2>
@@ -49,12 +49,12 @@
         </section>
         <ol id="card-travel">
           <section id="card-travel-one">
-          <img src="./assets/templo-haedong.png" alt="" />
+          <img src="./assets/templo-haedong.png" alt="Foto do templo de haedong" />
           <h3><li>Templo Haedong Yongussa</li></h3>
           <p id="content-card">
             O Templo Haedong Yonggungsa é um templo budista localizado no
             extremo nordeste de Busan. Construído em 1376, é um dos poucos
-            templos na Coreia construídos à beira-mar – você pode desfrutar de
+            templos na Coreia construídos à beira-mar - você pode desfrutar de
             vistas do Mar do Leste de um lado e de belas montanhas do outro.
             <br />
             <br />
@@ -95,13 +95,15 @@
             <strong>Bom para:</strong> <br />
           </p>
 
-          <ul>
+          <ul id="last-list">
             <li>Casais</li>
             <li>Famílias</li>
             <li>Orçamento</li>
           </ul>
         </section>
         </ol>
+        <div id="divider"></div>
+        <p id="description">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
       </main>
     </div>
     <footer>
