--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
       </main>
     </div>
     <footer>
-      Feito com <img src="./assets/ph_heart-fill.svg" alt="" />pela Rocketseat
+      Feito com <img src="./assets/ph_heart-fill.svg" alt="" /> pelo estudante FullStack da Rocketseat: Gabriel Nunes
+
     </footer>
   </body>
 </html>
